--- a/README.textile
+++ b/README.textile
@@ -16,3 +16,9 @@ h3. Testing
 http://www.cuberick.com/2008/11/unit-test-your-google-app-engine-models.html
 
 nosetests --with-gae -v ./test/controller/ ./test/domain/
+
+h3. DEV BOX
+
+http://vagrantup.com/docs/getting-started/index.html
+
+vagrant box add twitter-list-stats http://files.vagrantup.com/lucid32.box
